cleaned the code

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "ticket_sphere",
-    "short_name": "ticket_sphere",
+    "name": "new_project",
+    "short_name": "new_project",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
