--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ticket_sphere
+name: new_project
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -63,7 +63,6 @@ flutter:
     - assets/ticket_sphere_logo.png
     - assets/scrollable_icon.png
     - assets/ticket_images/concert-image-1.jpg
-
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
