created the sign in page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
     - assets/ticket_sphere_logo.png
     - assets/scrollable_icon.png
     - assets/ticket_images/concert-image-1.jpg
+    - assets/login_background.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
